--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 select {
@@ -21,7 +20,7 @@ button {
   padding: 7px 16px;
   border: none;
   cursor: pointer;
-  font-weight: 500;
+  font-weight: bold;
   margin-left: 10px;
 }
 .container {
@@ -57,6 +56,7 @@ button {
   background-color: #000;
   gap:8px;
   font-weight: 600;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 progress{
